fix: simplify security config to single filter chain for reliable internal endpoint access